--- a/css/style.css
+++ b/css/style.css
@@ -279,3 +279,14 @@ body {
     color: #f5d100;
 }
 
+.reloadWrap {
+    position: absolute;
+    top: 10%;
+    z-index: 1000;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+.reloadWrap .button {
+    margin-top: 0;
+}
